aws_security_group.tf
resource "aws_security_group" "sg_my_server" {
    name = "sg_my_server"
    description = "MyServer Security Group"
    vpc_id = data.aws_vpc.main.id

    ingress = [
        {
            description = "HTTP"
            from_port = 80
            to_port = 80
            protocol = "tcp"
            cidr_blocks = ["0.0.0.0/0"]
            ipv6_cidr_blocks = []
                prefix_list_ids = []
                security_groups = []
                self = false
        },
        {
            description = "SSH"
            from_port = 22
            to_port = 22
            protocol = "tcp"
            cidr_blocks = [var.my_ip_with_cidr]
            ipv6_cidr_blocks = []
                prefix_list_ids = []
                security_groups = []
                self = false
            
        }
    ]
    egress = [ 
        {
            description = "outgoing traffic"
            from_port = 0
            to_port = 0
            protocol = "-1"
            cidr_blocks = ["0.0.0.0/0"]
            ipv6_cidr_blocks = ["::/0"]
                prefix_list_ids = []
                security_groups = []
                self = false
        }
     ]
  
}
